# agentic-hospital

./: .example.env  .gitignore  Dockerfile  README.md  changelog.md  docker-compose.yml  patchnotes.md  pneumonia.json  pyproject.toml  simulation_output.json
.github/: pull_request_template.md
deploy/: nginx-site.conf
simulation_results/: sim_10_General_arthritis.json  sim_10_General_back_pain.json  sim_10_Neurology_delirium.json  sim_10_Neurology_stroke.json  sim_11_Gastroenterology_rectal_prolapse.json  sim_11_Rheumatology_axial_spondyloarthritis.json  sim_12_Gastroenterology_cholecystitis.json  sim_13_Endocrinology_metabolic_syndrome.json  sim_13_Neurology_alzheimers_disease.json  sim_14_General_impetigo.json  sim_14_Respiratory_acute_bronchitis.json  sim_15_Neurology_headache.json  sim_15_Orthopedics_meniscus_tear.json  sim_16_Gastroenterology_hepatitis_c.json  sim_16_Respiratory_pharyngitis.json  sim_17_General_cellulitis.json  sim_17_Respiratory_bronchitis.json  sim_18_Neurology_lumbar_disk_disease_herniated_disk.json  sim_18_Orthopedics_bone_spurs_osteophytes.json  sim_19_Cardiology_cerebrovascular_disease.json  sim_19_Gastroenterology_gallstones.json  sim_1_Cardiology_infectious_endocarditis.json  sim_1_Cardiology_transient_ischemic_attack.json  sim_1_Gastroenterology_zollinger_ellison_syndrome.json  sim_1_Neurology_acute_spinal_cord_injury.json  sim_1_Neurology_epilepsy.json  sim_1_Neurology_migraine.json  sim_1_Neurology_multiple_sclerosis.json  sim_1_Neurology_parkinsons_disease.json  sim_1_Neurology_stroke.json  sim_1_Orthopedics_spondylolisthesis.json  (+44 more)
(+212 files in other folders)
