[project]
name = "hs_pipeline"
version = "0.1.0"
description = "from pdf->simulation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.45.0",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "regex>=2025.9.18",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
