[project]
name = "hs_pipeline"
version = "0.1.0"
description = "from pdf->simulation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "google-genai>=1.45.0",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-ai>=1.1.0",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "regex>=2025.9.18",
    "streamlit>=1.50.0",
    "striprtf>=0.0.29",
    "xlrd>=2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
